--- a/face_recog_written.ipynb
+++ b/face_recog_written.ipynb
@@ -138,7 +138,7 @@
    ],
    "source": [
     "#detecting faces and labels and calling function to detect faces\n",
-    "detected_faces, face_labels = prepare_training_data(\"data_set\")\n",
+    "detected_faces, face_labels = prepare_training_data(\"mlData\")\n",
     "detected_faces = np.array(detected_faces)\n",
     "face_labels = np.array(face_labels)\n",
     "\n",
